# internal/entity/entity.go
@@ -5,10 +5,5 @@ const MinPasswordLength = 6
 type User struct {
 	Username     string
 	PasswordHash string
-	Links        []Link
-}
-
-type Link struct {
-	OriginalURL string
-	ShortURL    string
+	Links        map[string]string
 }
